--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,39 +12,39 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -64,3 +64,246 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/*global*/
+
+.testing * {
+    border: 1px solid palevioletred;
+}
+
+.container {
+    width: 880px;
+    margin: 0 auto;
+}
+
+p, a {
+    font-family: "Titillium Web";
+    font-size: 15px;
+}
+
+nav {
+    display: flex;
+    height: 50px;
+    margin: 0px 0px 20px 0px;
+    justify-content: space-between;
+    align-content: center;
+}
+
+nav a {
+    width: 100px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    color: lightgrey;
+    text-decoration: none;
+    font-size: 12px;
+}
+
+.logo-frame {
+    height: 90%;
+    display: flex;
+    margin-left: 25px;
+}
+
+footer{
+    margin: 50px 0px 50px 0px;
+    width: 100%;
+}
+
+footer p{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+/*Home*/
+
+.home hr {
+    width: 100%;
+    margin: 60px 0px 40px 0px;
+}
+
+.home header {
+    display: flex;
+    margin-bottom: 15px;
+    margin-top: 40px;
+    justify-content: space-between;
+}
+
+.home header .column{
+    width: 50%;
+    display: flex;
+}
+
+
+.home header .right-column{
+    padding: 40px 50px 60px 50px;
+}
+
+.home header .left-column {
+    flex-direction: column;
+    justify-content: center;
+}
+
+.home header h1{
+    width: 300px;
+    font-family: bangers;
+    font-size: 77px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.home header img{
+    width: 100%;
+    height: 100%;
+}
+
+.home .button{
+    display: flex;
+    width: 150px;
+    height: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    border: solid 1px black;
+    justify-content: center;
+    align-items: center;
+}
+
+.home main {
+    width: 900px;
+}
+
+.home h2{
+    font-family: bangers;
+    font-size: 1.3em;
+    margin: 0.7em 0px 0.7em 0px;
+}
+
+.home .main-content-columns1{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home .main-content-columns1 p{
+    padding-right: 10px;
+}
+
+.home .middle-img-helper{
+    width: 100%;
+}
+
+.home .middle-img{
+    display: block;
+    width: 90%;
+    margin: 15px auto 30px auto;
+}
+
+.home .main-content-columns2{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between
+}
+
+.home address{
+    display: inline-block;
+    width: 20%;
+    height: 120px;
+}
+
+.home address p{
+    width: 100%;
+    margin: 10px 0px 10px 0px;
+}
+
+.home address a{
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    margin: 10px 0px 10px 0px;
+}
+
+/* Services */
+
+.services-header-img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 25px;
+}
+
+.services h1 {
+    font-size: 30px;
+    margin: 0px 0px 15px 0px;
+}
+
+.services main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+}
+
+.services main section{
+    width: 410px;
+    height: 240px;
+    border: black 1px solid;
+    margin: 20px 0px;
+    padding: 15px;
+    background-color: RGB(244, 243 , 244);
+}
+
+.services main section p{
+    font-size: 18px;
+}
+
+.services main section a{
+    border: black 1px solid;
+    border-radius: 5px;
+    width: 140px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    margin-top: 10px;
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.services hr {
+    width: 100%;
+    margin: 30px 0px 30px 0px;
+}
+
+.services .facts{
+    display: flex;
+    font-size: 18px;
+    justify-content: space-between;
+}
+
+.services .facts .left-column{
+    width: 45%
+}
+
+.services .facts p{
+    font-size: 18px;
+}
+
+.services ul{
+    list-style: square;
+    margin-top: 20px;
+    margin-left: 20px
+}
+
+.services ul li{
+    margin: 15px 0px;
+}
