--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,46 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain) */
- html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-     margin: 0;
-     padding: 0;
-     border: 0;
-     font-size: 100%;
-     font: inherit;
-     vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
- article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-     display: block;
-}
- body {
-     line-height: 1;
-}
- ol, ul {
-     list-style: none;
-}
- blockquote, q {
-     quotes: none;
-}
- blockquote:before, blockquote:after, q:before, q:after {
-     content: '';
-     content: none;
-}
- table {
-     border-collapse: collapse;
-     border-spacing: 0;
-}
-/* Set every element's box-sizing to border-box */
- * {
-     box-sizing: border-box;
-}
- html, body {
-     height: 100%;
-     font-family: 'Titillium Web', sans-serif;
-}
- h1, h2, h3, h4, h5 {
-     font-family: 'Bangers', cursive;
-     letter-spacing: 1px;
-     margin-bottom: 15px;
-}
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*{box-sizing:border-box}body,html{height:100%;font-family:'Titillium Web', sans-serif}h1,h2,h3,h4,h5{font-family:'Bangers', cursive;letter-spacing:1px;margin-bottom:15px}
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 /*global*/
 hr {
@@ -169,20 +127,11 @@ hr {
      justify-content: space-between
 }
  .home address{
-     display: inline-block;
+     display: flex;
      width: 20%;
-     height: 120px;
-}
- .home address p{
-     width: 100%;
-     margin: 10px 0px 10px 0px;
-}
- .home address a{
-     display: inline-block;
-     text-decoration: none;
-     color: black;
-     width: 100%;
-     margin: 10px 0px 10px 0px;
+     height: 140px;
+     flex-direction: column;
+     justify-content: space-between;
 }
 /* Services */
  .services-header-img{
