--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -35,10 +35,25 @@ hr {
      font-size: 12px;
 }
  .logo-frame {
-     height: 90%;
+     width: 18%;
+     height: 100%;
      display: flex;
-     margin-left: 25px;
-}
+     margin-left: 20px;
+    align-items: center;
+    }
+
+    .logo-frame a {
+        width: auto;
+        height: auto;
+        display: flex;
+    }
+
+    .logo-frame img {
+        width: 100%;
+        height: auto;
+        justify-items: center;
+    }
+
  footer{
      margin: 50px 0px 50px 0px;
      width: 100%;
@@ -201,10 +216,15 @@ hr {
      margin: 15px 0px;
 }
 
+.about .about-header-img {
+    margin: 0 auto;
+    width: 100%;
+}
+
 .about .person {
     font-size: 11px;
     width: 250px;
-    height: 300px;
+    height: 360px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -216,6 +236,7 @@ hr {
 
 .about .name {
     text-align: center;
+    margin: 10px 0px;
 }
 
 .about .portrait{
@@ -226,7 +247,8 @@ hr {
 }
 
 .about .bio {
-    margin: 5px;
+    margin: 10px;
+    text-align: justify;
 }
 
 .about .team{
